--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,11 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  cached_network_image: ^3.2.0
+  #cached_network_image: ^3.2.0
+  cached_network_image:
+    git:
+      url: https://github.com/idkraf/flutter_cached_network_image.git
+      path: cached_network_image
   flutter:
     sdk: flutter
   flutter_parsed_text: ^2.2.1
