--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 
 dependencies:
   #cached_network_image: ^3.2.0
-  cached_network_image:
-    git:
-      url: https://github.com/idkraf/flutter_cached_network_image.git
-      path: cached_network_image
+  #cached_network_image:
+  #  git:
+  #    url: https://github.com/idkraf/flutter_cached_network_image.git
+  #    path: cached_network_image
   flutter:
     sdk: flutter
   flutter_parsed_text: ^2.2.1
